Stop page from having a horizontal scrollbar.

--- a/css/main.styl
+++ b/css/main.styl
@@ -99,6 +99,7 @@ html, button, input, select, textarea {
 
 body {
   background: #333333 url("images/bg.jpg") repeat-x;
+  overflow-x: hidden;
 }
 
 p {
